--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -99,14 +99,11 @@
 \\
  The selection, build, and testing of a custom quad-copter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk4 controlled quad-copter using QGroundControl mission planning software. In the meantime, a camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
 
-*Insert SLA1500CAM Test Results summary Here*
 
-Based on our project, the QGroundControl has demonstrated a great ability to control our quad-copter autonomously. The QGroundControl provides the ability to fully control all quad-copter parameters and as well as setting up a mission. We have successfully flied the drone autonomously using QGroundControl includes takeoff, land, fly the mission, and return to land. The precision landing feature on QGroundControl is not very promising. For the simple function like takeoff and landing, the position between takeoff and land was about 1 meter. For the flying to a destination and return, the difference in position was 2 meter. Additionally, before doing the flight test, we also use Mission Planner to simulate the flight and learn how to control the quad-copter's parameters.
+Based on our project, QGroundControl demonstrated a great ability to control the quad-copter autonomously. QGroundControl provides the ability to fully control all quad-copter parameters and as well as setting up a mission. We have successfully flied the drone autonomously using QGroundControl includes takeoff, land, fly the mission, and return to land. The precision landing feature on QGroundControl is not very promising. For the simple function like takeoff and landing, the position between takeoff and land was about 1 meter. For the flying to a destination and return, the difference in position was 2 meter. Additionally, before doing the flight test, we also use Mission Planner to simulate the flight and learn how to control the quad-copter's parameters.
    
-*What are the limitations?
-The limitation comes from both QGroundControl and SightLine hardware. Since SightLine hardware, or 1500-SLA-kit, is unable to talk with QGroundControl and as well as, we don't know if QGroundControl is capable of talking to SightLine hardware. There will be some works that SightLine need to be done with their hardware  so it will be able to talk with QGroundControl.  
+The limitation comes from both QGroundControl and SightLine hardware. Since SightLine hardware, or 1500-SLA-kit, is unable to talk with QGroundControl and as well as, we don't know if QGroundControl is capable of talking to SightLine hardware. There will be some work that SightLine needs to do with their hardware  so it will be able to talk with QGroundControl.  
 
-*What are the Future implications of the project?*
 The project is now divided into two parts. The first part is understand the Ground Control State software (QGroundControl) and hardware  such as Pixhawk 4, and SLA1500CAM. The second part will emphasize in software and communication development. SightLine and our team has determined to leave the second part of the project for the future capstone team. With our achievements on this project, we have a strong belief that the future team will be successful in this project and future function development.
 
 \pagebreak
@@ -183,7 +180,7 @@ Above is the project timeline which was created at the beginning of the Winter t
 %	\caption{\textit{Simple saturable reactor[1]}}	
 %	\end{figure}
 
-\section{Results(Technical Detail)}
+\section{Results}
 \subsection{Quadcopter}
 
 In this project, we used a DJI Flame F450 as the core for our custom quadcopter design. The parts and accessories are indicated in figure below. The total quadcopter's cost is \$989.29. In the end of the project, we have successfully optimized the automonous flight and control using Qgroundcontrol. Therefore, the radio transmitter and its receiver is no longer neccessary which brought the cost down to \$728.3 for the future experiment. \newline 
@@ -220,7 +217,9 @@ Pixhawk 4 is a flight controller made by Holybro and PX4. Pixhawk 4 is one of th
 \caption{\textit{Pixhawk 4}}	
 \end{figure}
 
-\subsection{Hardware}
+\newpage
+
+\subsection{SLA1500CAM}
 
 The 1x1.5” SLA1500CAM utilizes the On-Semi AR0134CS, a monochrome 1/3-inch 1.2 Mp CMOS digital sensor with a 74MHz output. It connects seamlessly with the SightLine SLA1500OEM image processing hardware via a 50-pin Hirose DF12 connector. With a 5V input the SLA1500CAM  converts and distributes the 3.3V, 2.8V, and 1.8V required for operation.
 
@@ -232,7 +231,7 @@ The 1x1.5” SLA1500CAM utilizes the On-Semi AR0134CS, a monochrome 1/3-inch 1.2
 	\caption{\textit{Level 1 block diagram of SLA1500CAM REV 8.0}}	
 	\end{figure}
 
-The SLA1500CAM also provides bi-directional level translation for serial and I2C communication between the SightLine hardware, the flight controller, and the optical sensor. There are five I/O ports using standard Molex and JST connectors: 
+The SLA1500CAM also provides bi-directional level translation for serial and I2C communication between the SightLine hardware, the flight controller, and the optical sensor. There are an additional four I/O ports using standard Molex and JST connectors: 
 
 \begin{itemize}
 
@@ -243,15 +242,27 @@ The SLA1500CAM also provides bi-directional level translation for serial and I2C
 
 \end{itemize}
 
+The schematic and PCB were designed using EAGLE CAD 9.2.1. Many of the component footprints and devices were unavailable and were designed specifically for the project. This involved designing the device, footprint, schematic symbol, and linking material data to each device. The entire EAGLE library for the SLA1500CAM can be found in the GitHub repository.
 
+\href{https://github.com/phamtaiece/Capstone-Sightline/tree/master/EAGLE\%20files/Library}{Eagle Library for SLA1500CAM}
 
-\subsection{Connector Summary}
+\begin{landscape}
+   \begin{figure}[H]
+	\centering	
+	\includegraphics[width=9.5in]{SLA1500CAM_V8_sch}
+	\caption{\textit{SLA 1500 CAM REV 8.0 Schematic}}	
+	\end{figure}
+\end{landscape}
+
+\subsubsection{Connector Summary}
 
     \begin{figure}[H]
 	\centering	
 	\includegraphics[width=7 in]{SLA1500CAM_CONN_V3}
 	\caption{\textit{Connector summary for SLA1500CAM REV 8.0}}	
 	\end{figure}
+
+\newpage
 
 \subsubsection{Connector J1}
 
@@ -280,16 +291,88 @@ AR0134 OEBAR is tied to ground with 0 OHM resistor R27.
 
 \textbf{*R27  MUST BE REMOVED BEFORE R26 IS INSTALLED AND CAMGPIO 178 CAN BE USED.}
 
+\subsubsection{Connector J2}
+5VDC Power in and serial communication with Pixhawk 4
 
-
-\begin{landscape}
-   \begin{figure}[H]
+    \begin{figure}[H]
 	\centering	
-	\includegraphics[width=9.5in]{SLA1500CAM_V8_sch}
-	\caption{\textit{SLA 1500 CAM REV 8.0 Schematic}}	
+	\includegraphics[width=3 in]{CONN_J2}
+	\caption{\textit{Connector summary for J2}}	
 	\end{figure}
-\end{landscape}
 
+\subsubsection{Connector J3}
+Auxiliary serial port
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=3 in]{CONN_J3}
+	\caption{\textit{Connector summary for J3}}	
+	\end{figure}
+
+\subsubsection{Connector J4}
+Discrete GPIO
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=3 in]{CONN_J4}
+	\caption{\textit{Connector summary for J4}}	
+	\end{figure}
+
+\newpage
+
+\subsubsection{Connector J5}
+Auxiliary I2C bus to SightLine
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=3 in]{CONN_J5}
+	\caption{\textit{Connector summary for J5}}	
+	\end{figure}
+
+
+\subsubsection{Optical Centering of AR0134}
+The optical center of the AR0134 in the ILCC48 package is at (-0.96mm,-2.0um) relative to the packages physical center as shown in the figure below from the AR0134 data sheet.
+
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=7 in]{opcenter}
+	\caption{\textit{Optical center for AR0134}}	
+	\end{figure}
+
+\newpage
+
+The AR0134 had to be offset (0.96mm, 2.0um) relative to the lens center on the layout as shown below.
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=5.5 in]{opcenter2}
+	\caption{\textit{Layout for SLA1500CAM showing optical center offset of AR0134}}	
+	\end{figure}
+
+\newpage
+
+\subsubsection{Power Grid}
+
+Besides component placement and signal routing, the power grid for the SLA1500CAM was an integral and complex part of the design. Three voltage regulators were used to translate the 5V input to 3.3V, 2.8V, and 1.8V. There were also four TXS0102 bidirectional open gate level translators that had to be positioned next to 3.3V and 1.8V rails. The power grid is shown below.
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=5.5 in]{power1}
+	\caption{\textit{SLA1500CAM power grid}}	
+	\end{figure}
+
+\subsubsection{Test Points}
+In addition to the test points referenced in the 
+\href{https://github.com/phamtaiece/Capstone-Sightline/blob/master/Test\%20Plan/SLA1500_CAM_TestV1.pdf}{SLA1500CAM Test Plan}, there are three test points as listed below
+
+    \begin{figure}[H]
+	\centering	
+	\includegraphics[width=3 in]{testpoint}
+	\caption{\textit{SLA1500CAM test points}}	
+	\end{figure}
+
+\subsubsection{Bill of Materials}
 
     \begin{figure}[H]
 	\centering	
@@ -297,11 +380,9 @@ AR0134 OEBAR is tied to ground with 0 OHM resistor R27.
 	\caption{\textit{SLA1500CAM BOM REV 8.0}}	
 	\end{figure}
 
-The schematic and PCB were designed using EAGLE CAD 9.2.1. Many of the component footprints and devices were unavailable and were designed specifically for the project. This involved designing the device, footprint, schematic symbol, and linking material data to each device. The entire EAGLE library for the SLA1500CAM can be found in the GitHub repository.
-
-\href{https://github.com/phamtaiece/Capstone-Sightline/tree/master/EAGLE\%20files/Library}{Eagle Library for SLA1500CAM}
 
 
+\newpage
 
 
 
@@ -330,14 +411,6 @@ Throughout the capstone project, we have gained a lot of experience which is not
 We have successfully completed autonomous flight and landing with custom quadcopter with flight controller, Pixhawk4, and Qgroundcontrol. Importantly, we were able to record the video when the vehicle was up in the air by using SLA-1500 kits which promissingly provides the ability to develop plug-and-play feature in the future with SLA-1500-CAM, Qgroundcontrol and Pixhakw4. \\
 However, The compability issues remain with Qgroundcontrol and Sightline hardware because Sightline SLA-1500 kits wasn't able to send the signal to Qgroundcontrol. Potentially, a new project will focus on software and communication between SLA-1500-CAM and Qgroundcontrol for a future team that is interested in drone communication protocols. With our achievements on this project, we believe that full integration of the SLA-1500-CAM with plug and play capabilities can be achieved.     
 
-\pagebreak
-
-\section{Appendix}
-\subsection{I}
-\subsection{II}
-\subsection{II}
-\subsection{IV}
-\subsection{V}	
 
 \pagebreak
 
