Update final documentation

--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -181,10 +181,11 @@ Above is the project timeline which was created at the beginning of the Winter t
 %	\end{figure}
 
 \section{Results}
-\subsection{Quadcopter}
+\subsection{Quad-copter}
 
-In this project, we used a DJI Flame F450 as the core for our custom quadcopter design. The parts and accessories are indicated in figure below. The total quadcopter's cost is \$989.29. In the end of the project, we have successfully optimized the automonous flight and control using Qgroundcontrol. Therefore, the radio transmitter and its receiver is no longer neccessary which brought the cost down to \$728.3 for the future experiment. \newline 
-With the 4S battery, the quadcopter has 15 minutes flying time, and the maximum take-off weight is  around 800g. Based on our experiment, the custom quadcopter has demonstrated safe and stable flights, and can be fully controlled by Groundcontrol Station.  
+In this project, we used a DJI Flamewheel F450 as the core for our custom quad-copter design. The parts and accessories are indicated in figure below. The total quad-copter's cost is \$989.29. In the end of the project, we successfully optimized the autonomous flight using QGroundControl. Therefore, the radio transmitter and its receiver were no longer necessary which brought the cost down to \$728.3 for future experiments. The entire build as well as the instructions for setup, and using the battery charger can be found in the \href{https://github.com/phamtaiece/Capstone-Sightline/blob/master/Final\%20Documentation/Standard\%20Operating\%20Procedures/SOP.pdf}{Standard Operating Procedures Document}
+\\
+With the 4S battery, the quad-copter has 15 minutes flying time. A rule of thumb for optimal takeoff weight for a quadcopter is 50-70\% max thrust. The tuned propulsion system with the selected motors, ESC, battery, and propellers can provide a maximum thrust of 710 g/rotor with a recommended take off weight of 350 g/rotor. This gives an optimal takeoff weight of 1.4 kg, and a maximum thrust of 2.84 kg. Our estimated takeoff weight of 1.35 kg is 54.4\% maximum thrust. Based on our experiment, the custom quad-copter has demonstrated safe and stable flights, and can be fully controlled by the Ground Control Station.  
 \newpage
 \begin{figure}[h!bt]
 \centering	
@@ -416,8 +417,13 @@ However, The compability issues remain with Qgroundcontrol and Sightline hardwar
 
 \section{References}
 \begin{enumerate}
-\item Mali, P. (1960).\textit{ Magnetic Amplifiers}. New York, NY: John F. Rider.
-\item Figure 1. Simple saturable reactor. Reprinted from \textit{Magnetic Amplifiers}(pg. 27), by Paul Mali, 1960, New York, NY, John F. Rider Publisher, Inc.
-\item Figure 2. Full-wave self-saturating magnetic amplifier. Reprinted from \textit{Magnetic Amplifiers}(pg. 35), by Paul Mali, 1960, New York, NY, John F. Rider Publisher, Inc.
+\item $Githubcom. (2019). GitHub. Retrieved 12 June, 2019, from https://github.com/phamtaiece/Capstone-Sightline$
+
+\item $Px4io. (2019). Px4io. Retrieved 12 June, 2019, from https://docs.px4.io/en/flight_controller/pixhawk4.html$
+
+\item$ Don gagne. (2019). Qgroundcontrolcom. Retrieved 12 June, 2019, from https://docs.qgroundcontrol.com/en/$
+
+\item $Ardupilotorg. (2019). Ardupilotorg. Retrieved 12 June, 2019, from http://ardupilot.org/planner/$
+
 \end{enumerate}	
 \end{document}
