--- a/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
+++ b/Final Documentation/Design Report/2019_ECECapstone_Team21.tex
@@ -95,7 +95,7 @@
 
  Integration of the SightLine Landing Aid for end users is problematic.  Often drone operators want to just “plug in” a component and fly their mission.  Installing software components is acceptable, but any requirement for programming is a barrier to entry or a complete show stopper.  Various cables, power, and other electrical connectivity issues are also difficult for vehicle integrator.  Rugged or at least robust mechanical enclosures, easy mounting, and environmental reliability are equally important.  Lastly, choice of optical system (camera) for the greatest range has cause adoption delays in that it has been a decision left to the integrator. Recognizing the needs from the end-users, SightLine wants to develop a plug and play precision landing aid for UAVs and expect that this new project will be highly valuable to a wide range of multi-copter integrator.
 \\
- Our solution to the problem involves: I. Selecting, and building a consumer level quad-copter that will  be easily customizable for testing II. Designing a camera that will connect directly to the SightLine hardware, distribute power, and facilitate communication III. Research and development of documentation and software to meet plug and play expectations.
+ Our solution to the problem involves: I. Selecting, and building a consumer level quad-copter that will  be easily customizable for testing; II. Designing a camera that will connect directly to the SightLine hardware, distribute power, and facilitate communication; III. Research and development of documentation and software to meet plug and play expectations.
 \\
  The selection, build, and testing of a custom quad-copter is a complicated task with many variables. GPS signal degradation made indoor flight tests impossible, and safe outdoor testing locations were hard to find. We did successfully build, and autonomously fly the Pixhawk4 controlled quad-copter using QGroundControl mission planning software. In the meantime, a camera for the SightLine hardware was designed utilizing an AR0134CS optical sensor. The camera board was also designed to provide power distribution, and facilitate communication between the Pixhawk 4 flight controller and the SightLine hardware.
 
@@ -154,7 +154,6 @@ The project is divided into three sections:
  \item Designing a camera based on the On-Semi AR0134CS optical sensor that connects directly to the SightLine hardware, distributes power, and facilitates communication  between the flight controller and SightLine hardware
  \item Research and development of documentation and software installers to meet plug and play expectations using QGroundControl flight control and mission planning software
 \end{enumerate}
-*Insert Project Roles and Responsibilities here*
 
 \subsubsection{Project Timeline}
 
@@ -410,7 +409,7 @@ Alternatively, Mission Planner is a autopilot software which is developed by Ard
 \section{Conclusion/What's Left to do}
 Throughout the capstone project, we have gained a lot of experience which is not only academic experience but only real world experience, and how to deal with some problems in a team. On the project side, we have successfully developed the SLA-1500-CAM. However, due to manufacturing delay, we haven't had a chance to test the board yet. We have also gain insight into communication between Qgroundcontrol, Pixhawk4, and Sightline SLA-1500 kits. \\
 We have successfully completed autonomous flight and landing with custom quadcopter with flight controller, Pixhawk4, and Qgroundcontrol. Importantly, we were able to record the video when the vehicle was up in the air by using SLA-1500 kits which promissingly provides the ability to develop plug-and-play feature in the future with SLA-1500-CAM, Qgroundcontrol and Pixhakw4. \\
-However, The compability issues remain with Qgroundcontrol and Sightline hardware because Sightline SLA-1500 kits wasn't able to send the signal to Qgroundcontrol. Potentially, a new project will focus on software and communication between SLA-1500-CAM and Qgroundcontrol for a future team that is interested in drone communication protocols. With our achievements on this project, we believe that full integration of the SLA-1500-CAM with plug and play capabilities can be achieved.     
+However, the compability issues remain with Qgroundcontrol and Sightline hardware because Sightline SLA-1500 kits wasn't able to send the signal to Qgroundcontrol. Potentially, a new project will focus on software and communication between SLA-1500-CAM and Qgroundcontrol for a future team that is interested in drone communication protocols. With our achievements on this project, we believe that full integration of the SLA-1500-CAM with plug and play capabilities can be achieved.     
 
 
 \pagebreak
